Issue 30: Update UH Axe product page styles to place content directly under primary nav - no extra space.

--- a/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
+++ b/web/themes/custom/commerce_2_demo/sass/custom/pages/_product_uh-axe.scss
@@ -5,9 +5,15 @@
 /**
  * Product full.
  */
-.path-product-uh-axe .site-content {
-  padding-bottom: 0;
-  margin-bottom: 0;
+.path-product-uh-axe {
+  .primary-nav {
+    border-bottom: none;
+  }
+
+  .site-content {
+    padding: 0;
+    margin-bottom: 0;
+  }
 }
 
 .product--full.product--full--uh-axe {
